--- a/qrreaderapp/pubspec.yaml
+++ b/qrreaderapp/pubspec.yaml
@@ -30,7 +30,9 @@ dependencies:
   cupertino_icons: ^0.1.3
   barcode_scan: ^1.0.0
   sqflite: ^1.1.5
-  path_provider: ^1.6.7
+  path_provider:
+  url_launcher: ^5.0.2
+  flutter_map: ^0.8.0
 
 dev_dependencies:
   flutter_test:
