--- a/formvalidation/pubspec.yaml
+++ b/formvalidation/pubspec.yaml
@@ -29,8 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   rxdart: ^0.24.1
-  http:
-  image_picker:
+  http: ^0.12.1
+  image_picker: ^0.6.7+11
+  mime_type:
 
 dev_dependencies:
   flutter_test:
